fixed temporary table processing expresions of subqueries and removed wrong restrictions of field resolving (BUG#5326)